--- a/templates/credentials/add_credential.twig
+++ b/templates/credentials/add_credential.twig
@@ -12,9 +12,10 @@
 {% block content %}
     <h1>{{ page_title }}</h1>
 
-    <form method="post" class="js-credentials-form">
+    {{ form_macros.form_errors(errors, is_csrf_error) }}
 
-        {{ form_macros.formErrors(errors) }}
+    <form method="post" class="js-credentials-form">
+        {{ form_macros.csrf_input('credential.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
