--- a/templates/credentials/edit_credential.twig
+++ b/templates/credentials/edit_credential.twig
@@ -11,9 +11,10 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post" class="js-credentials-form">
+    {{ form_macros.form_errors(errors, is_csrf_error) }}
 
-        {{ form_macros.formErrors(errors) }}
+    <form method="post" class="js-credentials-form">
+        {{ form_macros.csrf_input('credential.edit') }}
 
         <ul class="form-fields form-wrapper">
             <li>
