--- a/sass/components/_breadcrumbs.scss
+++ b/sass/components/_breadcrumbs.scss
@@ -24,12 +24,13 @@ $breadcrumb-bg-alt: mix($white, $breadcrumb-bg, 20%);
 
 .breadcrumb {
     list-style: none;
-    display: inline-block;
+    display: block;
     margin-top: 0;
+    display: flex;
 }
 
 .breadcrumb > li {
-    float: left;
+    flex: 0 1 auto;
 
     b {
         color: $breadcrumb-text-color-inverse;
@@ -57,6 +58,10 @@ $breadcrumb-bg-alt: mix($white, $breadcrumb-bg, 20%);
         padding: 0 .5em 0 .25em;
         text-align: center;
         margin-right: 1em;
+    }
+
+    &:last-child {
+        clear: right;
     }
 }
 
