--- a/templates/environment/add_environment.twig
+++ b/templates/environment/add_environment.twig
@@ -9,9 +9,10 @@
 {% endblock %}
 
 {% block content %}
-    {{ form_macros.formErrors(errors) }}
+    {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post">
+        {{ form_macros.csrf_input('environment.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
