--- a/templates/organization/add_organization.twig
+++ b/templates/organization/add_organization.twig
@@ -8,9 +8,11 @@
 {% endblock %}
 
 {% block content %}
-    {{ form_macros.formErrors(errors) }}
+    {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post">
+        {{ form_macros.csrf_input('organization.add') }}
+
         <ul class="form-fields form-wrapper">
             <li>
                 {% set has_error = form_macros.hasError(errors, 'name') %}
