--- a/templates/organization/edit_organization.twig
+++ b/templates/organization/edit_organization.twig
@@ -9,9 +9,11 @@
 {% endblock %}
 
 {% block content %}
-    {{ form_macros.formErrors(errors) }}
+    {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post">
+        {{ form_macros.csrf_input('organization.edit') }}
+
         <ul class="form-fields form-wrapper">
             <li>
                 <label>ID</label>
